--- a/css/styles.css
+++ b/css/styles.css
@@ -14,9 +14,17 @@ html {
   .nav {
     display: flex;
     width: 100%;
-    height: 4rem;
+    height: 75px;
     justify-content: space-between;
     align-items: center;
+    box-shadow: 0 0 10px;
+    background: #fff;
+    position: fixed;
+    top: 0;
+    margin-left: 0;
+    overflow-x: hidden;
+    padding: 0;
+    margin: 0;
     /* border-bottom: 1px solid rgba(128, 128, 128, 0.361); */
   }
   .google_image {
@@ -34,9 +42,12 @@ html {
     width: 28%;
   }
   .two{
-    width: 27%;
+    width: 25%;
     display: flex;
     justify-content: space-between;
+    padding: 0 24px;
+   
+    
     
   }
   .create{
@@ -49,6 +60,7 @@ html {
     font-weight: 800;
     border-radius: 5px;
     margin: 4px;
+    font-size: medium;
   }
   .create:hover{
     background-color: rgba(174, 174, 216, 0.171);
@@ -58,7 +70,7 @@ html {
     color: white;
     text-transform: capitalize;
     text-decoration: none;
-    background-color: blue;
+    background-color: #1a73e8;
     border-radius: 5px;
     font-weight: 800;
     padding: 1rem;
@@ -76,11 +88,13 @@ html {
     text-decoration: none;
     padding-bottom: 15px;
     color: rgba(0, 0, 0, 0.724);
+    font-size: medium;
     
   }
   .five{
     text-decoration: none;
     color: rgba(0, 0, 0, 0.52);
+    font-size: medium;
   }
   .nine{
     color: gray;
@@ -89,23 +103,33 @@ html {
 
   .seven{
     display: flex;
-    font-size: 25.5px;
+    font-size: 21px;
     margin-left: 80px;
     margin-top: 90px;
-    letter-spacing: 1px;
+    letter-spacing: .5px;
+    /* font: 16px Roboto, Arial, Helvetica, sans-serif; */
+    color: #202124;
     
   }
   .tagline{
-    font-size: 79px;
-    
+    font-size: 70px;
+    margin-top: 22%;
+    font: 900 Roboto, Arial, Helvetica, sans-serif;
+    letter-spacing: 1px;
+    margin-left: 20px;
+  }
+  .sign-info {
+    margin-top: 34px;
+    font-size: 22px;
+    margin-left: 22px;
+    line-height:1.625 ;
   }
   .four{
-    width: 45%;
-  
-    
+    width: 45%; 
   }
   .six{
     width: 50%;
+    margin-top: 8%;
   }
   .hp{
     width: 75%;
@@ -136,6 +160,8 @@ html {
     display: flex;
     border: 2px solid gray ;
     padding: 30px;
+  
+
   } 
   .hope{
     justify-content: center;
@@ -143,6 +169,7 @@ html {
     display: flex;
     border: 2px solid gray;
     padding: 30px;
+    /* margin-bottom: 22px; */
 
   }
   .help{
@@ -164,25 +191,44 @@ html {
     background-color: green;
     border: 0;
     margin: 0;
+    margin-bottom: 20px;
   
    
   
   }
   .pop{
     background-color: rgba(55, 55, 229, 0.845);
+    margin-left: 20%;
+    margin-top: 13px;
     
   }
   .pen{
     background-color: orange;
+    margin-left: 20px;
+    margin-top: 13px;
+    /* margin-bottom: 90px; */
+  }
+  .me {
+    top: 0;
   }
   .ten{
     text-align: center;
     font-size: 24.5px;
-    margin-top: 20px;
+    margin-top: 25px;
     letter-spacing: 3.5px;
     margin-right: 100px;
     margin-left: 100px;
   
+  }
+  .pen-info {
+    margin-left: 22px;
+    line-height: 1.625;
+    margin-top: 26px;
+    
+    
+
+    
+
   }
   .pens{
     font-size: 60px;
@@ -197,9 +243,15 @@ html {
     
     
   }
+  .help-info {
+    margin-top: 30px;
+    margin: 22px 0 0px 20%;
+    line-height: 1.625;
+    font-size: 23.px;
+    
+  }
   .btn2{
     font-size: 17px;
-    /* float: left; */
     width: 30%;
     height: 5px;
     margin-left: 80px;
@@ -209,5 +261,56 @@ html {
     letter-spacing: 2px;
     line-height: 20px;
   }
+  .us {
+    margin-left: 20%;
+  }
+  *{
+    margin: 0;
+    padding: 0;
+}
+section{
+  width: 100%;
+  height: 30vh;
+  /* background: gray; */
+}
+.container{
+  width: 90%;
+  margin: auto;
+  display: flex;
+  justify-content: space-evenly;
+}
+.option-one{
+  margin-top: 90px;
+width: 33%;
+height: 2px;
+text-align: center;
+cursor: pointer;
+}
+.stay-info {
+  min-width: 100%;
+  
+}
 
-    
+.alternate{
+  width: 40%;
+  /* background: blue; */
+}
+button{
+  font-size: 20px;
+  padding: 2px;
+  width: 100%;
+  outline: none;
+  border: none;
+cursor: pointer;
+
+}
+
+button:focus{
+  background: blue;
+}
+.sunny {
+  font-size: 18px;
+  line-height: 1.625rem;
+  margin: 0 15% 0 15%;
+  letter-spacing: 2.4px;
+}
