almost done with home page

--- a/css/styles.css
+++ b/css/styles.css
@@ -162,6 +162,7 @@ html {
     display: flex;
     border: 2px solid gray ;
     padding: 30px;
+    background-color:  #ffffff87;
     
   
 
@@ -405,4 +406,11 @@ button:focus{
 .logo_6 {
   margin-left: 40%;
 }
+   
 
+@media screen and (max-width: 320px) {
+  .two{
+    display: none;
+  }
+  
+}
